# gdpr-safe-rag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  gdpr_safe_rag_complete_documentation.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  architecture.md  quickstart.md
examples/: audit_logging_postgres.py  basic_pii_detection.py  compliance_check.py  langchain_integration.py
gdpr_safe_rag/: __init__.py  config.py  exceptions.py
gdpr_safe_rag/audit_logger/: __init__.py  exporters.py  logger.py  models.py
gdpr_safe_rag/audit_logger/backends/: __init__.py  base.py  memory_backend.py  postgres_backend.py  sqlite_backend.py
gdpr_safe_rag/compliance_checker/: __init__.py  checker.py  report.py
gdpr_safe_rag/compliance_checker/checks/: __init__.py  base.py  data_inventory.py  erasure.py  retention.py
gdpr_safe_rag/pii_detector/: __init__.py  detector.py  models.py  redactor.py  validators.py
gdpr_safe_rag/pii_detector/patterns/: __init__.py  base.py  common.py  eu_patterns.py  uk_patterns.py
tests/: __init__.py  conftest.py  test_audit_logger.py  test_compliance_checker.py  test_pii_detector.py
