[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpr-safe-rag"
version = "0.1.0"
description = "Production-grade Python toolkit for GDPR-compliant RAG systems with automatic PII detection, audit trails, and compliance validation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GDPR Safe RAG Team", email = "team@example.com"}
]
keywords = ["gdpr", "rag", "pii", "compliance", "audit", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "aiosqlite>=0.19.0",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
spacy = [
    "spacy>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Charlescifix/gdpr-safe-rag"
Documentation = "https://github.com/Charlescifix/gdpr-safe-rag#readme"
Repository = "https://github.com/Charlescifix/gdpr-safe-rag"
Issues = "https://github.com/Charlescifix/gdpr-safe-rag/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gdpr_safe_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)
