[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpr-safe-rag"
version = "0.1.0"
authors = [
    {name = "Charles Nwankpa", email = "charlesnwankpa@gen3block.com"}
]
description = "Production-grade Python toolkit for building GDPR-compliant RAG systems with automatic PII detection, audit trails, and compliance validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "gdpr",
    "rag",
    "retrieval-augmented-generation",
    "pii-detection",
    "compliance",
    "privacy",
    "langchain",
    "llamaindex",
    "data-protection",
    "audit-logging"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "regex>=2022.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
ner = [
    "spacy>=3.0.0",
]
all = [
    "psycopg2-binary>=2.9.0",
    "spacy>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Charlescifix/gdpr-safe-rag"
Documentation = "https://github.com/Charlescifix/gdpr-safe-rag/blob/main/docs/"
Repository = "https://github.com/Charlescifix/gdpr-safe-rag"
Issues = "https://github.com/Charlescifix/gdpr-safe-rag/issues"
Changelog = "https://github.com/Charlescifix/gdpr-safe-rag/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["gdpr_safe_rag"]
